# CryptGain-submission-for-xDay-hack-2023

./: .gitignore  Cargo.toml  README.md  build-wasm.sh
akf-mock/: Cargo.toml
akf-mock/meta/: Cargo.toml
akf-mock/meta/src/: main.rs
akf-mock/src/: akf_mock.rs
akf-mock/wasm/: Cargo.toml
akf-mock/wasm/src/: lib.rs
common/dsc_module/: Cargo.toml
common/dsc_module/src/: lib.rs  proxy.rs
common/test-utils/: Cargo.toml
common/test-utils/src/: block_state.rs  helpers.rs  lib.rs  test_setup.rs
common/utils_module/: Cargo.toml
common/utils_module/src/: lib.rs
delegation-proxy-mock/: Cargo.toml
delegation-proxy-mock/meta/: Cargo.toml
delegation-proxy-mock/meta/src/: main.rs
delegation-proxy-mock/src/: delegation_proxy_mock.rs
delegation-proxy-mock/wasm/: Cargo.toml
delegation-proxy-mock/wasm/src/: lib.rs
fuzz/: Cargo.toml
fuzz/src/: fuzz_data.rs  helpers.rs  lib.rs
g_token/: Cargo.toml  README.md
g_token/dex-outputs/: pair.wasm  router.wasm
g_token/meta/: Cargo.toml
g_token/meta/src/: main.rs
g_token/scenarios/burn/: basic.scen.json  request_gtoken_as_collateral_out.scen.json
g_token/scenarios/mint/: basic.scen.json  min_with_base_pair.scen.json
g_token/src/: config.rs  errors.rs  g_token.rs  pair_interactions.rs  router_interaction.rs  slippage.rs
g_token/tests/: all.rs
g_token/tests/setup/: burn.rs  mint.rs  mint_with_base_pair.rs  mod.rs
g_token/wasm/: Cargo.toml
g_token/wasm/src/: lib.rs
liquid-staking/: Cargo.toml  README.md
liquid-staking/delegation-outputs/: delegation.wasm
liquid-staking/meta/: Cargo.toml
liquid-staking/scenarios/addLiquidity/: basic.scen.json
liquid-staking/scenarios/claimRewards/: basic.scen.json
liquid-staking/src/: akf_interaction.rs  delegation_interaction.rs  funds.rs  liquid_staking.rs  liquidity_pool.rs  reward_sharing.rs  storage_cache.rs
liquid-staking/tests/setup/: add_liquidity.rs  claim_rewards.rs  mod.rs
liquid-staking/wasm/: Cargo.toml
liquid-staking/wasm/src/: lib.rs
scenarios/claimRewards/: basic.scen.json
