[package]
name = "akf-mock"
version = "0.0.0"
authors = ["Levi Chimezie levi@techypahrm.com"]
edition = "2021"
publish = false

[lib]
path = "src/akf_mock.rs"
[dependencies.multiversx-sc]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"


