[package]
name = "g_token"
version = "0.0.0"
authors = ["Levi Chimezie levi@techypharm.com"]
edition = "2021"
publish = false

[lib]
path = "src/g_token.rs"

[dependencies.multiversx-sc]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"

[dependencies.pair]
git = "https://github.com/newtmex/mx-exchange-sc.git"
branch = "hackathon-feat"

[dependencies.router]
git = "https://github.com/newtmex/mx-exchange-sc.git"
branch = "hackathon-feat"

[dependencies.math]
git = "https://github.com/newtmex/mx-exchange-sc.git"
branch = "hackathon-feat"

[dev-dependencies]
num-bigint = "0.4.2"
test-utils = { path = "../common/test-utils" }

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
